# qdc6

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qdc6.pro  qdc6.qbs  resources.qrc
